# Robocup2D_Analyzer

./: CMakeLists.txt  README.md  design.qss  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  page.cpp  page.h  page.ui
analysis/: analysis.cpp  analysis.h  analysis.ui  physics.cpp  physics.h  rcg2csv.cpp  rcg2csv.h  world_model.cpp  world_model.h
autoplay/: autoplay.cpp  autoplay.h  autoplay.ui  dialog.cpp  dialog.h  dialog.ui  server.cpp  server.h
